systemd-genie (1.29) unstable; urgency=medium

        * Updated to use .NET 5.0 framework.

 -- Alistair Young <avatar@arkane-systems.net>  Fri, 18 Dec 2020 07:40:00 -0500

systemd-genie (1.28) unstable; urgency=medium

        * Fixed bug preventing installation on pre-buster Debian releases.
        * Added "update-hostname" configuration setting to disable this behavior.
        * Improved WSL version detection.

 -- Alistair Young <avatar@arkane-systems.net>  Fri, 04 Sep 2020 18:48:00 -0500

systemd-genie (1.27) unstable; urgency=medium

        * Initial release (closes: Bug#968331).

 -- Alistair Young <avatar@arkane-systems.net>  Wed, 19 Aug 2020 11:35:51 -0500