@@ -7,14 +7,14 @@
 #
 
 all:
-	dotnet publish -c Release -r linux-x64 --self-contained false
+	dotnet publish -c Release -r linux-x64
 
 #
 # local: build for /usr/local
 #
 
 local:
-	dotnet publish -c ReleaseLocal -r linux-x64 --self-contained false
+	dotnet publish -c ReleaseLocal -r linux-x64
 
 #
 # clean: delete the package interim files
