@@ -5,6 +5,8 @@
     <TargetFramework>net5.0</TargetFramework>
     <VersionPrefix>1.29</VersionPrefix>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+    <PublishSingleFile>true</PublishSingleFile>
+    <SelfContained>false</SelfContained>
   </PropertyGroup>
 
   <ItemGroup>
